changed sidebar styling so it works for mobile and no longer relies on scrollbars. Close button positioning has changed too.

--- a/client/src/components/common/sideBar/styles/sideBar.css
+++ b/client/src/components/common/sideBar/styles/sideBar.css
@@ -6,7 +6,7 @@
     float: right;
     margin-right: 15px;
     margin-top: 15px;
-    font-size: 36px;
+    font-size: 13px;
     cursor: pointer;
 }
 
@@ -17,3 +17,8 @@
 #resizeContainer {
     overflow-x: hidden;
 }
+
+button[aria-selected="true"]{
+    border-bottom: 3px solid #f28374 !important;
+}
+button:focus {outline:0;}
